# epc_calc

./: .gitignore  Makefile  README.md  epc_formula_README.txt  epc_model.py  epc_result.json  model_example.json  pyproject.toml
.github/workflows/: ci.yml
epc/: pyvenv.cfg
models/: baseline.json
tests/: test_compute.py
