[project]
name = "epc-calc"
version = "0.1.0"
description = "Category-agnostic EPC calculator"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}

[project.scripts]
epc = "epc_model:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
